--- a/diagrams/4.2-deployment-diagram.md
+++ b/diagrams/4.2-deployment-diagram.md
@@ -6,7 +6,7 @@ The diagram below shows the AWS infrastructure distributed across **3 regions** 
 flowchart TB
     subgraph Internet["Internet"]
         Users["Global Users<br/>(300M potential)"]
-        TVApp["TV Show App<br/>(React.js)"]
+        TVApp["TV Show App<br/>(Frontend)"]
     end
 
     subgraph Edge["AWS Edge Services"]
