Replace ECS Fargate with ECS on EC2 to comply with no-serverless restriction

--- a/diagrams/4.2-deployment-diagram-eks.md
+++ b/diagrams/4.2-deployment-diagram-eks.md
@@ -2,7 +2,7 @@
 
 The diagram below shows the AWS infrastructure distributed across **3 regions** (US-East, EU-West, AP-Southeast) to reach the **250k RPS** peak. Regions serve traffic locally with Route53 failover; writes are centralized in the primary region.
 
-> **Note:** This is an alternative version using **EKS (Elastic Kubernetes Service)** instead of ECS Fargate. See [4.2-deployment-diagram.md](4.2-deployment-diagram.md) for the ECS Fargate version.
+> **Note:** This is an alternative version using **EKS (Elastic Kubernetes Service)** instead of ECS on EC2. See [4.2-deployment-diagram.md](4.2-deployment-diagram.md) for the ECS on EC2 version.
 
 ```mermaid
 flowchart TB
@@ -251,12 +251,12 @@ flowchart TB
 
 ## ECS vs EKS Comparison
 
-| Aspect | ECS Fargate | EKS |
-|--------|-------------|-----|
+| Aspect | ECS on EC2 | EKS |
+|--------|------------|-----|
 | **Management** | Simpler, AWS-native | More complex, Kubernetes expertise needed |
 | **Portability** | AWS-only | Multi-cloud, on-prem compatible |
-| **Scaling** | Task-level | Pod + Node level (more granular) |
+| **Scaling** | EC2 ASG + ECS Service Auto Scaling | Pod (HPA) + Node (Cluster Autoscaler) |
 | **Ecosystem** | AWS tools | Rich K8s ecosystem (Helm, Operators, etc.) |
-| **Cost** | Pay per task vCPU/memory | EC2 nodes + EKS control plane fee |
-| **Cold Start** | 30-60s per task | Faster if nodes pre-provisioned |
-| **Best For** | AWS-focused teams | Teams with K8s experience, multi-cloud needs |
+| **Cost** | EC2 instances only (Reserved/Spot available) | EC2 nodes + EKS control plane fee ($0.10/hr) |
+| **Cold Start** | Zero (instances pre-provisioned) | Zero if nodes pre-provisioned |
+| **Best For** | AWS-focused teams, simpler ops | Teams with K8s experience, multi-cloud needs |
