--- a/diagrams/4.2-deployment-diagram.md
+++ b/diagrams/4.2-deployment-diagram.md
@@ -34,7 +34,7 @@ flowchart TB
             end
             
             subgraph PrivateSubnet1["Private Subnets (AZ-a, AZ-b, AZ-c)"]
-                subgraph ECS1["ECS Fargate Cluster"]
+                subgraph ECS1["ECS on EC2 Cluster"]
                     AuthSvc1["Auth Service<br/>3-10 tasks<br/>2 vCPU / 4GB"]
                     VoteSvc1["Vote Service<br/>10-100 tasks<br/>4 vCPU / 8GB"]
                     ResultsSvc1["Results Service<br/>5-30 tasks<br/>2 vCPU / 4GB"]
@@ -54,7 +54,7 @@ flowchart TB
         subgraph VPC2["VPC 10.1.0.0/16"]
             APIGW2["API Gateway"]
             ALB2["ALBs"]
-            ECS2["ECS Fargate<br/>Auth | Vote | Results"]
+            ECS2["ECS on EC2<br/>Auth | Vote | Results"]
             SQS2["SQS Queue"]
             RDS2[("RDS PostgreSQL<br/>Read Replica")]
             Redis2["ElastiCache Redis"]
@@ -65,7 +65,7 @@ flowchart TB
         subgraph VPC3["VPC 10.2.0.0/16"]
             APIGW3["API Gateway"]
             ALB3["ALBs"]
-            ECS3["ECS Fargate<br/>Auth | Vote | Results"]
+            ECS3["ECS on EC2<br/>Auth | Vote | Results"]
             SQS3["SQS Queue"]
             RDS3[("RDS PostgreSQL<br/>Read Replica")]
             Redis3["ElastiCache Redis"]
@@ -172,7 +172,7 @@ flowchart TB
 ### Compute Layer (per region)
 - **API Gateway**: Throttling, JWT validation via Lambda Authorizer
 - **ALB**: Health checks, target groups per service
-- **ECS Fargate**: Auto-scaling based on CPU/Memory (target 70%)
+- **ECS on EC2**: EC2 Auto Scaling Groups + ECS Service Auto Scaling based on CPU/Memory (target 70%)
 
 ### Data Layer
 - **RDS PostgreSQL**: Multi-AZ, automated backups, point-in-time recovery
