lambda-auth - Replace Lambda Authorizer
Replace Lambda Authorizer with native JWT Authorizer to comply with no-serverless restriction

--- a/diagrams/4.2-deployment-diagram-eks.md
+++ b/diagrams/4.2-deployment-diagram-eks.md
@@ -233,7 +233,7 @@ flowchart TB
 - **CloudFront**: CDN for frontend static assets
 
 ### Compute Layer (per region)
-- **API Gateway**: Throttling, JWT validation via Lambda Authorizer
+- **API Gateway**: Throttling, JWT validation via native JWT Authorizer (Auth0 issuer + audience)
 - **ALB**: Provisioned by AWS Load Balancer Controller from Ingress
 - **EKS**: Kubernetes orchestration with Cluster Autoscaler
 
