--- a/diagrams/4.2-deployment-diagram.md
+++ b/diagrams/4.2-deployment-diagram.md
@@ -170,7 +170,7 @@ flowchart TB
 - **CloudFront**: CDN for React app static assets
 
 ### Compute Layer (per region)
-- **API Gateway**: Throttling, JWT validation via Lambda Authorizer
+- **API Gateway**: Throttling, JWT validation via native JWT Authorizer (Auth0 issuer + audience)
 - **ALB**: Health checks, target groups per service
 - **ECS Fargate**: Auto-scaling based on CPU/Memory (target 70%)
 
