--- a/diagrams/4.2-deployment-diagram.md
+++ b/diagrams/4.2-deployment-diagram.md
@@ -1,58 +1,61 @@
 # 4.2 Deployment Diagram
 
-The diagram below shows the AWS infrastructure distributed across **3 regions** (US-East, EU-West, AP-Southeast) to reach the **250k RPS** peak. Regions serve traffic locally with Route53 failover; writes are centralized in the primary region.
+AWS infrastructure distributed across **3 regions** (US-East, EU-West, AP-Southeast) to handle **250k RPS** peak. Writes centralized in US-East-1 (primary); reads served from local replicas.
 
 ```mermaid
 flowchart TB
     subgraph Internet["Internet"]
         Users["Global Users<br/>(300M potential)"]
-        TVApp["TV Show App<br/>(Frontend)"]
+    end
+
+    subgraph StaticFlow["Static Assets Flow"]
+        CloudFront["CloudFront CDN"]
+        S3Static["S3 Bucket<br/>React App"]
     end
 
     subgraph Edge["AWS Edge Services"]
-        Route53["Route53<br/>DNS + Geo Routing<br/>+ Health Checks"]
-        WAF["AWS WAF<br/>DDoS Protection<br/>Rate Limiting"]
-        CloudFront["CloudFront<br/>Static Assets CDN"]
+        Route53["Route53<br/>Geo Routing + Health Checks"]
+        WAF["AWS WAF<br/>DDoS + Rate Limit per IP"]
     end
 
     subgraph Auth0Cloud["Auth0 (External)"]
-        Auth0["Auth0<br/>Identity Provider<br/>OAuth2/OIDC"]
+        Auth0["Auth0<br/>OAuth2/OIDC"]
     end
 
-    Users --> TVApp
-    TVApp --> Route53
+    %% Static flow (separate from API)
+    Users -->|Static Assets| CloudFront --> S3Static
+
+    %% API flow
+    Users -->|API Calls| Route53
     Route53 --> WAF
-    WAF --> CloudFront
 
     subgraph Region1["US-EAST-1 (Primary)"]
         subgraph VPC1["VPC 10.0.0.0/16"]
-            subgraph PublicSubnet1["Public Subnets (AZ-a, AZ-b, AZ-c)"]
-                APIGW1["API Gateway<br/>100k RPS limit<br/>JWT Validation"]
-                ALB1_Auth["ALB<br/>Auth Service"]
-                ALB1_Vote["ALB<br/>Vote Service"]
-                ALB1_Results["ALB<br/>Results Service"]
+            subgraph Public1["Public Subnets (3 AZs)"]
+                APIGW1["API Gateway<br/>100k RPS<br/>JWT Authorizer (native)"]
+                ALB1["ALBs<br/>Auth | Vote | Results"]
             end
-            
-            subgraph PrivateSubnet1["Private Subnets (AZ-a, AZ-b, AZ-c)"]
-                subgraph ECS1["ECS on EC2 Cluster"]
-                    AuthSvc1["Auth Service<br/>3-10 tasks<br/>2 vCPU / 4GB"]
-                    VoteSvc1["Vote Service<br/>10-100 tasks<br/>4 vCPU / 8GB"]
-                    ResultsSvc1["Results Service<br/>5-30 tasks<br/>2 vCPU / 4GB"]
+
+            subgraph Private1["Private Subnets (3 AZs)"]
+                subgraph ECS1["ECS Cluster"]
+                    ASG1["EC2 Auto Scaling Group<br/>m6i.2xlarge (3-10 instances)"]
+                    AuthSvc1["Auth Service<br/>3-10 tasks"]
+                    VoteSvc1["Vote Service<br/>10-100 tasks"]
+                    ResultsSvc1["Results Service<br/>5-30 tasks"]
                 end
-                
-                SQS1["SQS Queue<br/>Vote Buffer<br/>+ DLQ"]
+                SQS1["SQS Queue<br/>Vote Buffer + DLQ"]
             end
-            
-            subgraph DataSubnet1["Data Subnets (AZ-a, AZ-b)"]
-                RDS1[("RDS PostgreSQL<br/>Primary<br/>db.r6g.4xlarge<br/>Multi-AZ")]
-                Redis1["ElastiCache Redis<br/>Cluster Mode<br/>Vote Aggregates"]
+
+            subgraph Data1["Data Subnets (2 AZs)"]
+                RDS1[("RDS PostgreSQL<br/>Primary (Multi-AZ)<br/>db.r6g.4xlarge")]
+                Redis1["ElastiCache Redis<br/>Cluster (3 nodes)"]
             end
         end
     end
 
     subgraph Region2["EU-WEST-1"]
         subgraph VPC2["VPC 10.1.0.0/16"]
-            APIGW2["API Gateway"]
+            APIGW2["API Gateway<br/>100k RPS"]
             ALB2["ALBs"]
             ECS2["ECS on EC2<br/>Auth | Vote | Results"]
             SQS2["SQS Queue"]
@@ -63,7 +66,7 @@ flowchart TB
 
     subgraph Region3["AP-SOUTHEAST-1"]
         subgraph VPC3["VPC 10.2.0.0/16"]
-            APIGW3["API Gateway"]
+            APIGW3["API Gateway<br/>100k RPS"]
             ALB3["ALBs"]
             ECS3["ECS on EC2<br/>Auth | Vote | Results"]
             SQS3["SQS Queue"]
@@ -72,16 +75,13 @@ flowchart TB
         end
     end
 
-    subgraph SharedServices["Shared Services"]
-        SecretsManager["Secrets Manager<br/>DB Credentials<br/>API Keys"]
-        CloudWatch["CloudWatch<br/>Logs + Metrics"]
+    subgraph SharedServices["Shared Services (Global)"]
+        CloudWatch["CloudWatch<br/>Logs + Metrics + Alarms"]
+        Grafana["Grafana<br/>Dashboards"]
+        XRay["X-Ray<br/>Distributed Tracing"]
+        SecretsManager["Secrets Manager"]
         ECR["ECR<br/>Container Registry"]
         S3Audit["S3<br/>Audit Logs"]
-    end
-
-    subgraph Observability["Observability Stack"]
-        Prometheus["Prometheus<br/>Metrics Collection"]
-        Grafana["Grafana<br/>Dashboards"]
     end
 
     %% Edge to Regions
@@ -90,10 +90,11 @@ flowchart TB
     WAF --> APIGW3
 
     %% Region 1 Flow
-    APIGW1 --> ALB1_Auth --> AuthSvc1
-    APIGW1 --> ALB1_Vote --> VoteSvc1
-    APIGW1 --> ALB1_Results --> ResultsSvc1
-    
+    APIGW1 --> ALB1
+    ALB1 --> AuthSvc1
+    ALB1 --> VoteSvc1
+    ALB1 --> ResultsSvc1
+
     VoteSvc1 --> SQS1
     SQS1 --> VoteSvc1
     VoteSvc1 --> RDS1
@@ -121,65 +122,73 @@ flowchart TB
     RDS1 -.->|Async Replication| RDS2
     RDS1 -.->|Async Replication| RDS3
 
-    %% Shared Services
-    ECS1 --> SecretsManager
+    %% Observability
     ECS1 --> CloudWatch
+    CloudWatch --> Grafana
+    ECS1 --> XRay
     ECS1 --> S3Audit
-    CloudWatch --> Prometheus --> Grafana
 
     %% Styling
-    classDef primary fill:#e1f5fe,stroke:#01579b
-    classDef secondary fill:#f3e5f5,stroke:#4a148c
     classDef data fill:#e8f5e9,stroke:#1b5e20
     classDef edge fill:#fff3e0,stroke:#e65100
-    
+    classDef static fill:#e0f7fa,stroke:#006064
+
     class RDS1,RDS2,RDS3,Redis1,Redis2,Redis3 data
-    class APIGW1,APIGW2,APIGW3,ALB1_Auth,ALB1_Vote,ALB1_Results,ALB2,ALB3 edge
+    class APIGW1,APIGW2,APIGW3,ALB1,ALB2,ALB3 edge
+    class CloudFront,S3Static static
 ```
 
 ---
 
-## Regional Capacity Legend
+## Regional Capacity
 
 | Component | US-East-1 (Primary) | EU-West-1 | AP-Southeast-1 |
-|------------|---------------------|-----------|----------------|
+|-----------|---------------------|-----------|----------------|
 | API Gateway | 100k RPS | 100k RPS | 100k RPS |
+| EC2 Instances | 3-10 (m6i.2xlarge) | 3-10 | 3-10 |
 | ECS Tasks (Vote) | 10-100 | 10-100 | 10-100 |
 | RDS PostgreSQL | Primary (r6g.4xlarge) | Read Replica | Read Replica |
 | Redis Cluster | 3 nodes | 3 nodes | 3 nodes |
-| SQS Throughput | Unlimited | Unlimited | Unlimited |
+| SQS | Unlimited throughput | Unlimited | Unlimited |
 
 ---
 
 ## Deployment Decisions
 
-| Decision | Description |
-|---------|-----------|
-| **Route53 Geolocation Routing** | Users are routed to the closest region |
-| **Multi-AZ per region** | RDS and ECS are distributed across 3 AZs for HA |
-| **Write to Primary** | All votes are written to RDS US-East-1 (primary) |
-| **Read Replicas** | EU and AP read from local replicas for lower latency |
+| Decision | Why |
+|----------|-----|
+| **Route53 Geolocation Routing** | Route users to closest region for lowest latency |
+| **Multi-AZ per region** | RDS, ECS and ALB distributed across 3 AZs for HA |
+| **Write to Primary only** | All votes write to US-East-1 RDS; avoids multi-master conflicts |
+| **Read from local Replicas** | EU and AP read from local RDS replicas for low-latency results |
+| **ECS on EC2 (not Fargate)** | Fargate is serverless (restricted). EC2 enables Reserved Instances and zero cold start |
+| **Native JWT Authorizer** | Replaces Lambda Authorizer (serverless restricted). API Gateway validates JWT natively |
 
 ---
 
 ## Layer Details
 
 ### Edge Layer
-- **Route53**: Geo-routing + health checks with automatic failover (30s detection)
+- **Route53**: Geolocation routing + health checks, automatic failover (30s detection)
 - **WAF**: DDoS protection, per-IP rate limiting, anti-bot rules
-- **CloudFront**: CDN for React app static assets
+- **CloudFront**: CDN for React app static assets (served from S3, separate from API flow)
 
 ### Compute Layer (per region)
-- **API Gateway**: Throttling, JWT validation via native JWT Authorizer (Auth0 issuer + audience)
+- **API Gateway**: Throttling, native JWT Authorizer (Auth0 issuer + audience)
 - **ALB**: Health checks, target groups per service
-- **ECS on EC2**: EC2 Auto Scaling Groups + ECS Service Auto Scaling based on CPU/Memory (target 70%)
+- **ECS on EC2**: EC2 Auto Scaling Groups + ECS Service Auto Scaling (target CPU 70%)
 
 ### Data Layer
 - **RDS PostgreSQL**: Multi-AZ, automated backups, point-in-time recovery
-- **ElastiCache Redis**: Cluster mode for vote aggregates and session cache
-- **SQS**: Standard queue with DLQ for retry handling
+- **ElastiCache Redis**: Cluster mode for vote aggregates, deduplication, and session cache
+- **SQS**: Standard queue with DLQ for vote buffering and retry
+
+### Observability
+- **CloudWatch**: Centralized logs, metrics, and alarms (infra + application)
+- **X-Ray**: Distributed tracing across services
+- **Grafana**: Dashboards via CloudWatch datasource
 
 ### Shared Services
-- **Secrets Manager**: Automatic credential rotation
-- **CloudWatch**: Centralized logs, custom metrics
+- **Secrets Manager**: Automatic credential rotation for DB and API keys
+- **ECR**: Container image registry for ECS deployments
 - **S3**: Audit logs with lifecycle policy (90 days → Glacier)
