Simplify deployment diagram and add drawio version

--- a/diagrams/4.2-deployment-diagram.md
+++ b/diagrams/4.2-deployment-diagram.md
@@ -1,141 +1,88 @@
 # 4.2 Deployment Diagram
 
-AWS infrastructure distributed across **3 regions** (US-East, EU-West, AP-Southeast) to handle **250k RPS** peak. Writes centralized in US-East-1 (primary); reads served from local replicas.
+AWS multi-region infrastructure (3 regions) to handle **250k RPS** peak. Writes centralized in US-East-1; reads from local replicas.
 
 ```mermaid
 flowchart TB
-    subgraph Internet["Internet"]
-        Users["Global Users<br/>(300M potential)"]
+    Users["Global Users (300M)"]
+
+    subgraph Edge["Edge"]
+        Route53["Route53<br/>Geo Routing"]
+        WAF["WAF<br/>DDoS + Rate Limit"]
     end
 
-    subgraph StaticFlow["Static Assets Flow"]
-        CloudFront["CloudFront CDN"]
-        S3Static["S3 Bucket<br/>React App"]
-    end
+    Users -->|API calls| Route53 --> WAF
 
-    subgraph Edge["AWS Edge Services"]
-        Route53["Route53<br/>Geo Routing + Health Checks"]
-        WAF["AWS WAF<br/>DDoS + Rate Limit per IP"]
-    end
+    subgraph Region1["US-EAST-1 (Primary Region)"]
+        APIGW1["API Gateway · 100k RPS<br/>JWT Authorizer (native)"]
+        ALB1["ALBs"]
 
-    subgraph Auth0Cloud["Auth0 (External)"]
-        Auth0["Auth0<br/>OAuth2/OIDC"]
-    end
-
-    %% Static flow (separate from API)
-    Users -->|Static Assets| CloudFront --> S3Static
-
-    %% API flow
-    Users -->|API Calls| Route53
-    Route53 --> WAF
-
-    subgraph Region1["US-EAST-1 (Primary)"]
-        subgraph VPC1["VPC 10.0.0.0/16"]
-            subgraph Public1["Public Subnets (3 AZs)"]
-                APIGW1["API Gateway<br/>100k RPS<br/>JWT Authorizer (native)"]
-                ALB1["ALBs<br/>Auth | Vote | Results"]
-            end
-
-            subgraph Private1["Private Subnets (3 AZs)"]
-                subgraph ECS1["ECS Cluster"]
-                    ASG1["EC2 Auto Scaling Group<br/>m6i.2xlarge (3-10 instances)"]
-                    AuthSvc1["Auth Service<br/>3-10 tasks"]
-                    VoteSvc1["Vote Service<br/>10-100 tasks"]
-                    ResultsSvc1["Results Service<br/>5-30 tasks"]
-                end
-                SQS1["SQS Queue<br/>Vote Buffer + DLQ"]
-            end
-
-            subgraph Data1["Data Subnets (2 AZs)"]
-                RDS1[("RDS PostgreSQL<br/>Primary (Multi-AZ)<br/>db.r6g.4xlarge")]
-                Redis1["ElastiCache Redis<br/>Cluster (3 nodes)"]
-            end
+        subgraph ECS1["ECS on EC2 · 3 AZs"]
+            Auth1["Auth Service"]
+            Vote1["Vote Service"]
+            Results1["Results Service"]
         end
+
+        SQS1["SQS<br/>Vote Queue + DLQ"]
+        RDS1[("RDS PostgreSQL<br/>Primary · Multi-AZ")]
+        Redis1["Redis Cluster<br/>Cache + Dedup"]
     end
 
     subgraph Region2["EU-WEST-1"]
-        subgraph VPC2["VPC 10.1.0.0/16"]
-            APIGW2["API Gateway<br/>100k RPS"]
-            ALB2["ALBs"]
-            ECS2["ECS on EC2<br/>Auth | Vote | Results"]
-            SQS2["SQS Queue"]
-            RDS2[("RDS PostgreSQL<br/>Read Replica")]
-            Redis2["ElastiCache Redis"]
-        end
+        APIGW2["API Gateway · 100k RPS"]
+        ECS2["ECS on EC2<br/>Auth | Vote | Results"]
+        SQS2["SQS"]
+        RDS2[("RDS PostgreSQL<br/>Read Replica")]
+        Redis2["Redis Cluster"]
     end
 
     subgraph Region3["AP-SOUTHEAST-1"]
-        subgraph VPC3["VPC 10.2.0.0/16"]
-            APIGW3["API Gateway<br/>100k RPS"]
-            ALB3["ALBs"]
-            ECS3["ECS on EC2<br/>Auth | Vote | Results"]
-            SQS3["SQS Queue"]
-            RDS3[("RDS PostgreSQL<br/>Read Replica")]
-            Redis3["ElastiCache Redis"]
-        end
+        APIGW3["API Gateway · 100k RPS"]
+        ECS3["ECS on EC2<br/>Auth | Vote | Results"]
+        SQS3["SQS"]
+        RDS3[("RDS PostgreSQL<br/>Read Replica")]
+        Redis3["Redis Cluster"]
     end
 
-    subgraph SharedServices["Shared Services (Global)"]
-        CloudWatch["CloudWatch<br/>Logs + Metrics + Alarms"]
-        Grafana["Grafana<br/>Dashboards"]
-        XRay["X-Ray<br/>Distributed Tracing"]
-        SecretsManager["Secrets Manager"]
-        ECR["ECR<br/>Container Registry"]
-        S3Audit["S3<br/>Audit Logs"]
-    end
+    Auth0["Auth0 (External)"]
 
-    %% Edge to Regions
+    %% Edge to regions
     WAF --> APIGW1
     WAF --> APIGW2
     WAF --> APIGW3
 
-    %% Region 1 Flow
-    APIGW1 --> ALB1
-    ALB1 --> AuthSvc1
-    ALB1 --> VoteSvc1
-    ALB1 --> ResultsSvc1
+    %% Primary region flow
+    APIGW1 --> ALB1 --> ECS1
+    Vote1 --> SQS1 --> Vote1
+    Vote1 --> RDS1
+    Vote1 --> Redis1
+    Results1 --> Redis1
+    Results1 --> RDS1
+    Auth1 --> Auth0
+    Auth1 --> Redis1
 
-    VoteSvc1 --> SQS1
-    SQS1 --> VoteSvc1
-    VoteSvc1 --> RDS1
-    VoteSvc1 --> Redis1
-    ResultsSvc1 --> Redis1
-    ResultsSvc1 --> RDS1
-    AuthSvc1 --> Auth0
-    AuthSvc1 --> Redis1
-
-    %% Region 2 Flow
-    APIGW2 --> ALB2 --> ECS2
+    %% Secondary regions
+    APIGW2 --> ECS2
     ECS2 --> SQS2
-    ECS2 -->|Reads| RDS2
     ECS2 --> Redis2
+    ECS2 -->|Reads| RDS2
     ECS2 -.->|Writes| RDS1
 
-    %% Region 3 Flow
-    APIGW3 --> ALB3 --> ECS3
+    APIGW3 --> ECS3
     ECS3 --> SQS3
-    ECS3 -->|Reads| RDS3
     ECS3 --> Redis3
+    ECS3 -->|Reads| RDS3
     ECS3 -.->|Writes| RDS1
 
-    %% Cross-region replication
+    %% Replication
     RDS1 -.->|Async Replication| RDS2
     RDS1 -.->|Async Replication| RDS3
-
-    %% Observability
-    ECS1 --> CloudWatch
-    CloudWatch --> Grafana
-    ECS1 --> XRay
-    ECS1 --> S3Audit
 
     %% Styling
     classDef data fill:#e8f5e9,stroke:#1b5e20
     classDef edge fill:#fff3e0,stroke:#e65100
-    classDef static fill:#e0f7fa,stroke:#006064
-
     class RDS1,RDS2,RDS3,Redis1,Redis2,Redis3 data
-    class APIGW1,APIGW2,APIGW3,ALB1,ALB2,ALB3 edge
-    class CloudFront,S3Static static
+    class APIGW1,APIGW2,APIGW3,ALB1 edge
 ```
 
 ---
@@ -149,7 +96,7 @@ flowchart TB
 | ECS Tasks (Vote) | 10-100 | 10-100 | 10-100 |
 | RDS PostgreSQL | Primary (r6g.4xlarge) | Read Replica | Read Replica |
 | Redis Cluster | 3 nodes | 3 nodes | 3 nodes |
-| SQS | Unlimited throughput | Unlimited | Unlimited |
+| SQS | Unlimited | Unlimited | Unlimited |
 
 ---
 
@@ -157,38 +104,39 @@ flowchart TB
 
 | Decision | Why |
 |----------|-----|
-| **Route53 Geolocation Routing** | Route users to closest region for lowest latency |
-| **Multi-AZ per region** | RDS, ECS and ALB distributed across 3 AZs for HA |
+| **3 Regions** | API Gateway caps at 100k RPS/region. 3 x 100k = 300k capacity for 250k peak |
+| **Route53 Geo Routing** | Users routed to closest region (lowest latency) |
+| **Multi-AZ (3 AZs)** | ECS and RDS distributed across AZs for high availability |
 | **Write to Primary only** | All votes write to US-East-1 RDS; avoids multi-master conflicts |
-| **Read from local Replicas** | EU and AP read from local RDS replicas for low-latency results |
-| **ECS on EC2 (not Fargate)** | Fargate is serverless (restricted). EC2 enables Reserved Instances and zero cold start |
-| **Native JWT Authorizer** | Replaces Lambda Authorizer (serverless restricted). API Gateway validates JWT natively |
+| **Read from local Replica** | EU and AP read from local RDS replicas for low-latency results |
+| **ECS on EC2** | Fargate is serverless (restricted). EC2 allows Reserved Instances and zero cold start |
+| **Native JWT Authorizer** | Lambda Authorizer is serverless (restricted). API Gateway validates JWT natively |
 
 ---
 
 ## Layer Details
 
-### Edge Layer
-- **Route53**: Geolocation routing + health checks, automatic failover (30s detection)
+### Edge
+- **Route53**: Geolocation routing + health checks, failover in 30s
 - **WAF**: DDoS protection, per-IP rate limiting, anti-bot rules
-- **CloudFront**: CDN for React app static assets (served from S3, separate from API flow)
+- **CloudFront**: CDN for React static assets (separate flow, not shown)
 
-### Compute Layer (per region)
-- **API Gateway**: Throttling, native JWT Authorizer (Auth0 issuer + audience)
-- **ALB**: Health checks, target groups per service
-- **ECS on EC2**: EC2 Auto Scaling Groups + ECS Service Auto Scaling (target CPU 70%)
+### Compute (per region)
+- **API Gateway**: Throttling + native JWT Authorizer (Auth0 issuer/audience)
+- **ALB**: Health checks, target group per service
+- **ECS on EC2**: EC2 ASG (instance scaling) + ECS Service Auto Scaling (task scaling), target CPU 70%
 
-### Data Layer
-- **RDS PostgreSQL**: Multi-AZ, automated backups, point-in-time recovery
-- **ElastiCache Redis**: Cluster mode for vote aggregates, deduplication, and session cache
-- **SQS**: Standard queue with DLQ for vote buffering and retry
+### Data (per region)
+- **RDS PostgreSQL**: Multi-AZ, automated backups, PITR
+- **ElastiCache Redis**: Cluster mode — vote aggregates, deduplication, session cache
+- **SQS**: Standard queue + DLQ for vote buffering and retry
 
-### Observability
-- **CloudWatch**: Centralized logs, metrics, and alarms (infra + application)
-- **X-Ray**: Distributed tracing across services
-- **Grafana**: Dashboards via CloudWatch datasource
+### Observability (not shown, see section 9)
+- **CloudWatch**: Logs, metrics, alarms
+- **X-Ray**: Distributed tracing
+- **Grafana**: Dashboards (CloudWatch datasource)
 
-### Shared Services
-- **Secrets Manager**: Automatic credential rotation for DB and API keys
-- **ECR**: Container image registry for ECS deployments
-- **S3**: Audit logs with lifecycle policy (90 days → Glacier)
+### Shared Services (not shown)
+- **Secrets Manager**: Automatic credential rotation
+- **ECR**: Container image registry
+- **S3**: Audit logs (90 days → Glacier)
